selenium-node-chrome.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: selenium-node-chrome 
  namespace: selenium-conference-2018-prod
  labels:
    app: selenium-node-chrome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      containers:
      - name: selenium-node-chrome
        image: selenium/node-chrome
        ports:
          - containerPort: 5900 
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 125m
            memory: 512Mi
