selenium-hub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: selenium-conference-2018-prod
  labels:
    app: selenium-hub
spec:
  ports:
  - port: 4444 
    targetPort: 4444 
    name: port0
  selector:
    app: selenium-hub
  type: ClusterIP
  sessionAffinity: None
